[package]
name = "cogo-http"
version = "0.1.12"
edition = "2021"
description = "A modern HTTP library."
readme = "README.md"
license = "MIT/Apache-2.0"

repository = "https://github.com/co-rs/cogo-http.git"
homepage = "https://github.com/co-rs"

authors = ["zhuxiujia <zhuxiujia@qq.com>",
    "Sean McArthur <sean.monstar@gmail.com>",
    "Jonathan Reem <jonathan.reem@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
    "Cargo.toml",
    "LICENSE",
    "src/**/*"
]

[features]
default = ["runtime_cogo","serde_json"]
runtime_thread = ["dashmap"]
runtime_cogo = ["cogo"]
nightly = []

[dependencies]
base64 = "0.9.0"
httparse = "1"
language-tags = "0.2"
log = "0.3"
mime = "0.2"
time = "0.1"
traitobject = "0.1"
typeable = "0.1"
unicase = "1.0"
url = "1.0"
cogo = {version = "0.1", optional = true }

crossbeam = "0.8"
crossbeam-channel = "0.5"
encoding="0.2"
textnonce="1"
buf-read-ext = "0.4.0"
serde_urlencoded = "0.7"
httpdate ="1"
serde = "1"
serde_json = {version = "1", optional = true }

#only runtime_thread
dashmap = {version = "4.0.2" , optional = true }

[dev-dependencies]
env_logger = "0.4"
serde = "1"
serde_json = "1"
cdbc = "0.1"
# cdbc-mysql,cdbc-pg... and more...
cdbc-sqlite = "0.1"
#captcha
lodepng = "~3.5.2"
captcha = "0.0.8"
