[workspace]
members = [
    "examples"
]
[package]
name = "mco-http"
version = "0.1.27"
edition = "2021"
description = "A modern HTTP library."
readme = "README.md"
license = "MIT/Apache-2.0"

repository = "https://github.com/co-rs/mco-http.git"
homepage = "https://github.com/co-rs"

authors = ["zhuxiujia <zhuxiujia@qq.com>",
    "Sean McArthur <sean.monstar@gmail.com>",
    "Jonathan Reem <jonathan.reem@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
    "Cargo.toml",
    "LICENSE",
    "src/**/*"
]

[features]
default = ["runtime_mco", "serde_json"]
runtime_thread = ["dashmap"]
runtime_mco = ["mco"]
nightly = []

[dependencies]
base64 = "0.21.5"
httparse = "1"
language-tags = "0.3.2"
log = "0.4"
mime = "0.2"
time = "0.1"
traitobject = "0.1"
typeable = "0.1"
unicase = "1.0"
url = "1.0"
mco = { version = "0.1", optional = true }

crossbeam = "0.8"
crossbeam-channel = "0.5"
encoding = "0.2"
textnonce = "1"
buf-read-ext = "0.4.0"
serde_urlencoded = "0.7"
httpdate = "1"
serde = "1"
serde_json = { version = "1", optional = true }

#only runtime_thread
dashmap = { version = "5.5.3", optional = true }

[dev-dependencies]
