[package]
name = "mco-http-rustls"
version = "0.1.0"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Rustls+hyper integration for pure rust HTTPS"
homepage = "https://github.com/ctz/hyper-rustls"
repository = "https://github.com/ctz/hyper-rustls"

[dependencies]
webpki-roots = "0.26.0"
rustls = { version="0.22",features = [] }
rustls-pemfile="2.0"
rotor = "0.6"
vecio = "0.1"

mco-http ={version = "0.1",path="../"}

[dev-dependencies]
log = "0.3"
env_logger = "0.3"
